syntax = "proto3";

package io.mtini.proto;

//import public "EstateLedger.proto";

option java_outer_classname="EATRequestResponseProtos";

message EATRequestResponse{

    message Request{
        string jsonRequest = 1;
        //LedgerEntries entries = 2;
        bytes data = 2;
    }
    
    message Response{
        string jsonResponse = 1;
        //LedgerEntries entries = 2;
        bytes data = 2;
    }
    
    Request request  = 1;
    Response response = 2;
    
}
